--- a/core_concepts.ipynb
+++ b/core_concepts.ipynb
@@ -1355,6 +1355,16 @@
         "# generate predictions for testing data\n",
         "y_pred = clf.predict(X_test)\n",
         "```\n",
+        "```python\n",
+        "# plot values for feature importance\n",
+        "def plot_feature_importances(model):\n",
+        "    n_features = data_train.shape[1]\n",
+        "    plt.figure(figsize=(8,8))\n",
+        "    plt.barh(range(n_features), model.feature_importances_, align='center') \n",
+        "    plt.yticks(np.arange(n_features), data_train.columns.values) \n",
+        "    plt.xlabel(\"Feature importance\")\n",
+        "    plt.ylabel(\"Feature\")\n",
+        "```\n",
         "\n",
         "2. SciKit Learn - Regression\n",
         "```python\n",
@@ -1522,7 +1532,11 @@
         "\n",
         "**Evaluation Metrics**\n",
         "\n",
-        "**Cautions**"
+        "SAME AS DECISION TREES\n",
+        "\n",
+        "**Cautions**\n",
+        "\n",
+        "SAME AS DECISION TREES"
       ]
     },
     {
