Added section info

--- a/core_concepts.ipynb
+++ b/core_concepts.ipynb
@@ -930,9 +930,13 @@
         "colab_type": "text"
       },
       "source": [
-        "_Definition:_\n",
+        "_Definition:_ - independent random variables drawn from a general population will converge to a normal distribution as the number of variables increases\n",
+        "  * Essentially, if a random sample is large enough, it will resemble a normal distribution\n",
         "\n",
         "_Empirical Rule for Percentiles:_\n",
+        "  * 68% of the data will fall within 1 standard deviation of the mean\n",
+        "  * 95% of the data will fall within 2 standard deviations of the mean\n",
+        "  * 99.7% of the data will fall within 3 standard deviations of the mean\n",
         "\n",
         "_Sampling Statistics:_\n",
         "\n",
@@ -1081,7 +1085,63 @@
         "colab_type": "text"
       },
       "source": [
-        "## Dimensionality Reduction"
+        "## Dimensionality Reduction\n",
+        "\n",
+        "**Purpose** - to reduce the number of dimensions of the data for the algorithm to model while maintaining as much of the variance in the data as possible\n",
+        "* Curse of Dimensionality - On the one hand, more features allow one to account for additional influences to account for variance and nuances required to accurately model a given machine learning model. On the other hand, as the number of dimensions increases, the accompanying volume of the hyperspace explodes exponentially. As such, the potential amount of information required to accurately model such space become increasingly complex.\n",
+        "* Points in n-dimensional space become increasingly sparse as the number of dimensions increases\n",
+        "  * Large space between individual data points makes it hard for the algorithm to find relationships\n",
+        "* there are apt to be entire regions of an n-dimensional space that have yet to be explored. As such, if no such information from the training set is available regarding such cases, then making predictions regarding these cases will be guesswork. \n",
+        "  * Put another way, with the increasing sparsity of points, you have an ever decreasing proportionate sample of the space\n",
+        "\n",
+        "**Algorithm**\n",
+        "1. Principle Component Analysis - \n",
+        "  * Recenter each feature of the dataset by subtracting that feature's mean from the feature vector\n",
+        "  * Calculate the covariance matrix for your centered dataset\n",
+        "    * For an n-dimensional data set, the covariance matrix has n rows and n columns (square matrix) and each entry in the matrix is the result of calculating the covariance between two separate dimensions\n",
+        "    * $cov(X, Y) = \\frac{\\sum_{i}^{n}(X_i - \\mu_X)(Y_i - \\mu_Y)}{n - 1}$\n",
+        "    \n",
+        "    <img src=\"https://raw.githubusercontent.com/learn-co-students/dsc-3-34-07-pca-implementation-visualization-python-numpy-lab-online-ds-ft-021119/master/images/covmat.png\" width=350>\n",
+        "    \n",
+        "    * Down the main diagonal, we can see that the covariance value is between one of the dimensions and itself. These are the variances for that dimension.\n",
+        "    * Since $cov(a,b) = cov(b,a)$, the matrix is symmetrical about the main diagonal.\n",
+        "  * Calculate the eigenvectors of the covariance matrix\n",
+        "    * Eigenvectors are unit vectors, with length or magnitude is equal to 1.0\n",
+        "      * Eigenvalues are coefficients applied to eigenvectors that give the vectors their length or magnitude\n",
+        "    * A matrix can have one eigenvector and eigenvalue for each dimension of the parent matrix\n",
+        "      * A vector  $v$  is an eigenvector of a square matrix  A  if it satisfies the following equation: $Av = \\lambda v$, where $\\lambda$ represents the eigenvalue scalar\n",
+        "    * Eigendecomposition - you decompose the initial matrix into the product of its eigenvectors and eigenvalues\n",
+        "      * $A = Q . diag(V) . Q^-1$\n",
+        "      * Where:\n",
+        "        * $Q$ is a matrix comprised of the eigenvectors\n",
+        "        * $diag(V)$ is a diagonal matrix comprised of the __eigenvalues__ along the diagonal\n",
+        "        * $Q^-1$ is the inverse of the matrix comprised of the eigenvectors.\n",
+        "  * Order the eigenvectors by eigenvalue from highest to lowest. Discard the eigenvectors with the smaller eigenvalues to reduce dimensionality\n",
+        "    * In general, the smaller the eigenvalue relative to others, the less information encoded within said feature.\n",
+        "    * The eigenvector with the highest eigenvalue is the principal component of the data set.\n",
+        "    * Can calculate the proportion of variance for each eigenvector with SciKit Learn and and use a predetermined amount to decide how many eigenvectors to keep/discard\n",
+        "      * For example, if you want to maintain at least 85% of the variance in the dataset and the first three principle components (eigenvectors) account for 90% of the overall variance, discard all eigenvectors after the first three\n",
+        "  * Project the dataset into the new feature space: Multiply the eigenvectors by the mean centered features\n",
+        "\n",
+        "**Methods**\n",
+        "1. SciKit Learn - PCA\n",
+        "```python\n",
+        "# import necessary packages\n",
+        "from sklearn.decomposition import PCA\n",
+        "```\n",
+        "```python\n",
+        "# Instantiate a model\n",
+        "pca = PCA()\n",
+        "```\n",
+        "```python\n",
+        "# fit the model to the data and transform data to principle components\n",
+        "transformed = pca.fit_transform(X)\n",
+        "```\n",
+        "```python\n",
+        "# Display explained variance for each principle component\n",
+        "np.cumsum(pca.explained_variance_ratio_)\n",
+        "```\n",
+        "  * NOTE: the explained variance of each principle component is cumulative (i.e the second principle component attempts to explain the variance not captured by the first principle component)"
       ]
     },
     {
@@ -1282,15 +1342,103 @@
       "source": [
         "## Logistic Regression\n",
         "\n",
-        "**Algorithm**\n",
+        "**Algorithm** - classify two groups where the location along the sigmoid curve of the regression model indicates the probability of whether the observation belongs to one group or the other.\n",
+        "  * Binary classification\n",
+        "  * Supervised \n",
+        "$$P(event) = \\frac{1}{1 + e^{(b + m_1x_1 + \\text{ } ... \\text{ }m_ix_i)}}$$\n",
+        "  * Where,\n",
+        "    * $b$ is the model's intrecept/constant parameter\n",
+        "    * $m_1x_1 + \\cdot \\cdot \\cdot \\text{ } m_ix_i$ are the coefficients for each feature in the data\n",
         "\n",
         "**Assumptions**\n",
+        "* Does NOT require the variable linearity, normally distributed residuals, or homoscedasticity like linear regression\n",
+        "* Does need:\n",
+        "  * Independent observations\n",
+        "  * little or no multicollinearity\n",
+        "  * large sample size\n",
+        "  * linearity of independent variables and log odds (although this analysis does not require the dependent and independent variables to be related linearly, it requires that the independent variables are linearly related to the log odds) \n",
         "\n",
         "**Methods**\n",
+        "1. Statsmodels\n",
+        "```python\n",
+        "# import necessary packages\n",
+        "import statsmodels.api as sm\n",
+        "```python\n",
+        "# transform categorical data (binarize and compare)\n",
+        "from patsy import dmatrices\n",
+        "y, X = dmatrices('Target ~ feature1  + C(feature2) + C(feature3)', df, return_type = \"dataframe\")\n",
+        "```\n",
+        "```python\n",
+        "# create the model\n",
+        "logit_model = sm.Logit(y[:,1], X)\n",
+        "result = logit_model.fit()\n",
+        "```\n",
+        "```python\n",
+        "# display summary and paramerters\n",
+        "result.summary()\n",
+        "np.exp(result.params)\n",
+        "```\n",
+        "2. SciKit Learn\n",
+        "```python\n",
+        "# import necessary packages\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "```\n",
+        "```python\n",
+        "# instantiate model\n",
+        "logreg = LogisticRegression(fit_intercept = False, C = 1e12)\n",
+        "```\n",
+        "```python\n",
+        "# fit model to training data\n",
+        "model_log = logreg.fit(X_train, y_train)\n",
+        "```\n",
+        "```python\n",
+        "# generate predictions\n",
+        "y_hat_test = logreg.predict(X_test)\n",
+        "y_hat_train = logreg.predict(X_train)\n",
+        "```\n",
         "\n",
         "**Evaluation Metrics**\n",
+        "1. Confusion Matrix - displays the ratio/raw count of correct and incorrect predictions for each class\n",
+        "```python\n",
+        "pd.crosstab(y_test, y_pred, rownames=['True'], colnames=['Predicted'], margins=True)\n",
+        "```\n",
+        "2. Classification Report - displays the precision, recall, accuracy, and F1 scores\n",
+        "  * Precision - the number of correct predictions for a class relative to the total number of predictions for that class\n",
+        "$$Precision = \\frac{\\text{Number of True Positives}}{\\text{Number of Predicted Positives}}$$\n",
+        "  * Recall - the number of correct predictions for a class relative to the actual number of instances for that class\n",
+        "$$Recall = \\frac{\\text{Number of True Positives}}{\\text{Number of Actual Total Positives}}$$ \n",
+        "  * Accuracy - a measure of how many predictions are correct for each class, and over the entire data set\n",
+        "$$Accuracy = \\frac{\\text{Number of True Positives + True Negatives}}{\\text{Total Observations}}$$\n",
+        "  * F1 Score - harmonic mean of precision and recall (both precision and recall have to be high for the F1 score to be high)\n",
+        "$$F1 Score = 2\\ \\frac{Precision\\ x\\ Recall}{Precision + Recall}$$\n",
+        "```python\n",
+        "# import necessary packages\n",
+        "from sklearn.metrics import classification_report\n",
+        "```\n",
+        "```python\n",
+        "target_names = ['class 0', 'class 1', 'class 2']\n",
+        "print(classification_report(y_true, y_pred, target_names=target_names))\n",
+        "```\n",
+        "3. Receiver Operater Characteristic (ROC) Curve and Area Under the Curve (AUC) - evaluation for binary classification task; most useful if there is a class imbalance\n",
+        "  * Tells how good the model is at separating the two classes\n",
+        "  * ROC Curve -  illustrates the false positive against false negative rate of a classifier\n",
+        "    * want it to hug the upper-left corner of a graph\n",
+        "  * AUC - measure of how well the data were separated into their classes\n",
+        "    * AUC = 1; perfect classifier\n",
+        "    * AUC = 0.5; random chance\n",
+        "    * AUC < 0.5; worse than random guessing\n",
         "\n",
-        "**Cautions**"
+        "**Cautions**\n",
+        "1. Bias-Variance Trade off $\\to$ understand the use-case of the model and the project goals\n",
+        "  * Ultimately want low bias and low variance; but reducing one tends to increase the other\n",
+        "  * Bias is associated with underfitting\n",
+        "    * model is unable to define the underlying relationship between the features and the target\n",
+        "    * incorrect assumptions about the data are made while training\n",
+        "    * model focuses on one aspect of the data instead of the overall relationship\n",
+        "  * Variance is associated with overfitting\n",
+        "    * forcing the model to fit the extreme instances in the training data\n",
+        "      * essentially fitting the noise\n",
+        "    * Resulting model is too sensitive to small fluctuations in the data"
       ]
     },
     {
@@ -1454,8 +1602,16 @@
         "\n",
         "**Algorithm** - training different models independently on different subsets of data by sampling with replacement\n",
         "  * Goal is to create variability in the ensemble of models\n",
+        "      * Due to randomly sampling portion of data and number of features\n",
         "  * Utilizes Strong Learners (think deep trees)\n",
         "    * Each model has the goal of doing as well as possible on the classification or regression task they are given\n",
+        "  * Method:\n",
+        "    * Randomly sample 2/3 of the data (with replacement) for training; set aside the other 1/3 for interal testing/error calculation (while building the trees)\n",
+        "      * Boostrap Aggregation (aka bagging)\n",
+        "    * Randomly select a predetermined number of features from the dataset to use for training each node within a tree\n",
+        "      * Subspace Sampling Method\n",
+        "    * Train the tree on this modified dataset to perform as well as possible\n",
+        "    * Use the Out-of-Bag data (1/3 previously set aside) as an internal testing set to calculate the Out-Of-Bag Error for each particular tree.\n",
         "\n",
         "**Assumptions**\n",
         "\n",
@@ -1548,7 +1704,7 @@
       "source": [
         "## Support Vector Machines\n",
         "\n",
-        "**Algorithm**\n",
+        "**Algorithm** - performs a classification task by finding the hyperplane that best seperate the data into its classes by maximizing the margin of the decision boundary between the classes\n",
         "\n",
         "**Assumptions**\n",
         "\n",
@@ -1573,6 +1729,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "jqos_ZGmeDDW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mavWSFItJYW3",
         "colab_type": "code",
         "colab": {}
       },
