added neural network content

--- a/core_concepts.ipynb
+++ b/core_concepts.ipynb
@@ -7,7 +7,6 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1698,13 +1697,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "iHutnSO4be_U",
+        "colab_type": "text"
+      },
+      "source": [
+        "## K-Nearest Neighbors"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Vj87aC64XxaJ",
         "colab_type": "text"
       },
       "source": [
         "## Support Vector Machines\n",
         "\n",
-        "**Algorithm** - performs a classification task by finding the hyperplane that best seperate the data into its classes by maximizing the margin of the decision boundary between the classes\n",
+        "**Algorithm** - performs a classification task by finding the hyperplane that best seperates the data into its classes by maximizing the margin of the decision boundary between the classes\n",
         "\n",
         "**Assumptions**\n",
         "\n",
@@ -1722,21 +1731,129 @@
         "colab_type": "text"
       },
       "source": [
-        "## Neural Networks"
+        "## Neural Networks\n",
+        "\n",
+        "**Basic Concept** - composed of three main steps: (1) propagate the data _forward_ through the network to produce a prediction ($\\hat y$). (2) Average the loss ($\\hat y - y$) across all of the training instances to compute the cost function $J(w, b)$. (3) propagate the parameters $w$ and $b$ _backwards_ through the network which minimized the cost function (this is performed at each node).\n",
+        "\n",
+        "* Forward Propagation:\n",
+        "   * at each node between the input and output layers, the data first goes through a linear transformation ($z_1 = w_1x + b_1$) and then a subsequent transformation due to the activation function ($a_1 = f(z_1)$). \n",
+        "      * $w$ represents the weight; coefficient for each feature in the data\n",
+        "      * $b$ represents the bias; constant/intercept\n",
+        "   * The value of $a_1$ is passed on to the next node and enters its linear transformation ($z_2 = w_2a_1 + b_2$) to yield $z_2$, which then goes into that node's activation function ($a_2 = f(z_2)$) to yield $a_2$. \n",
+        "   * This process continues until the output layer is reached. The output layer results in the prediction ($\\hat y = f(a_i)$, where $i$ represents the number of hidden layers)\n",
+        "\n",
+        "* Loss Function $\\mathcal{L}$ and Cost Function $J$:\n",
+        "  * The loss function measures the inconsistency (difference) between the predicted value $(\\hat y)$ and the actual label $y$\n",
+        "    * The actual function for $\\mathcal{L}(\\hat y, y)$ varies based on the activation function that is used\n",
+        "    * Calculate for each training sample:\n",
+        "      * $z^{(i)} = wx^{(i)} + b$\n",
+        "      * $\\hat y^{(i)} = f(z^{(i)})$\n",
+        "      * $dz^{(i)} = \\hat y^{(i)} - y^{(i)}$\n",
+        "  * The values from the loss function for all of the training instances ($l$) are averaged to get the overall cost function $J(w,b)$\n",
+        "\n",
+        "* Back Propagation:\n",
+        "  * Calculate the derivative of the cost function with $$\\frac{dJ(w,b)}{dw_i} = \\frac{1}{l}\\sum_{i=1}^{l}\\frac{d\\mathcal{L}(\\hat y^{(i)}, y^{(i)})}{dw_i}$$\n",
+        "    * To do this, derive $dw_i$ for each weight $w$ and $db_i$ for each bias $b$\n",
+        "    $$dw_i = \\frac{d\\mathcal{L}(\\hat y^{(i)}, y^{(i)})}{dw_i} = \\frac{d\\mathcal{L}(\\hat y , y)}{d \\hat y}\\cdot\\frac{d\\hat y}{dz}\\cdot\\frac{dz}{d w_i} = x^{(i)}dz^{(i)}$$\n",
+        "    \n",
+        "    $$db_i = \\frac{d\\mathcal{L}(\\hat y , y)}{d b_i} = \\frac{d\\mathcal{L}(\\hat y , y)}{d \\hat y}\\cdot\\frac{d\\hat y}{dz}\\cdot\\frac{dz}{d b_i} = dz^{(i)}$$\n",
+        "  * Update the weights $w_i$ and biases $b_i$ with the predeterimined learning rate $\\alpha$\n",
+        "    * $w_{i\\text{--updated}} = w_i - \\alpha(dw_i)$\n",
+        "    * $b_{i\\text{--updated}} = b_i - \\alpha(db_i)$\n",
+        "\n",
+        "**Types**\n",
+        "1. Dense\n",
+        "\n",
+        "2. Convolutional\n",
+        "\n",
+        "3. Recurrent\n",
+        "\n",
+        "**Activation Functions** - transfer function that is used to map the output of one layer to another\n",
+        "\n",
+        "[Visualizing activation functions](https://dashee87.github.io/deep%20learning/visualising-activation-functions-in-neural-networks/)\n",
+        "\n",
+        "[Some discussion of newer activation functions](http://www.machineintellegence.com/different-types-of-activation-functions-in-keras/)\n",
+        "\n",
+        "[Better link for activation function discussion](https://codeodysseys.com/posts/activation-functions/)\n",
+        "\n",
+        "1. Sigmoid - typically used as the output layer for binary classification tasks\n",
+        "  * Outputs values in range from 0 to 1 corresponding to the probability of the observation's class (think logistic regression)\n",
+        "    * Gradient won't explode\n",
+        "    * Can make optimization challenging because values are not centered around zero\n",
+        "  * As $z$ (the product of the linear transformation) goes to larger values in the positive direction or smaller values in the negative direction, the derivative of the activation function approaches zero\n",
+        "    * This is bad as it slows down gradient descent (learning) $\\to$ dead neuron in extreme cases\n",
+        "\n",
+        "<p align='center'>\n",
+        "  <img src=\"https://cdn-images-1.medium.com/freeze/max/1000/0*mz91LzHIBzGhZ4J-.jpg?q=20\" height=450>\n",
+        "</p>\n",
+        "\n",
+        "2. Hyperbolic Tangent (tanh) - similar to sigmoid function, but typically used in the hidden layers for binary classification tasks\n",
+        "  * Outputs values in the range of -1 to 1\n",
+        "    * Gradient won't explode\n",
+        "    * Good because values are closer to zero\n",
+        "    * Makes optimization easier than sigmoid\n",
+        "  * As $z$ (the product of the linear transformation) goes to larger values in the positive direction or smaller values in the negative direction, the derivative of the activation function approaches zero\n",
+        "    * This is bad as it slows down gradient descent (learning) $\\to$ dead neuron in extreme cases\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://cdn-images-1.medium.com/freeze/max/1000/1*xYNjRIoyy7pVnuzelF3BrA.png?q=20\" height=450>\n",
+        "</p>\n",
+        "\n",
+        "3. Inverse Tangent (arctan) - Similar qualities as tanh, but attempts to overcome the vanishing gradient issue by smoothing the curve into the asymtotic plateaus\n",
+        "  * Outputs values in the range of roughly -1.6 to 1.6\n",
+        "    * $-\\pi/2$ to $\\pi/2$\n",
+        "    * Gradient won't explode\n",
+        "  * The derivative approaches zero more gradually, making learning more efficient\n",
+        "    * More computationally expensive than tanh\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://raw.githubusercontent.com/kpokrass/review/master/arctan_activation.png\" width=400>\n",
+        "</p>\n",
+        "\n",
+        "4. Rectified Linear Unit (ReLU) - most common activation function; retains the biological motivation of the step function (neuron only fires if inputs exceed threshold), but has a non-zero derivative at positive inputs, which allows gradient-based learning (though the derivative is undefined at exactly 0)\n",
+        "  * should only be used within Hidden layers of a Neural Network \n",
+        "  * provides the same benefits as Sigmoid but with better performance.\n",
+        "  * Outputs values in the range of 0 to +$\\infty$\n",
+        "  * But, since the upper bound is +$\\infty$, the output value can explode\n",
+        "  * avoids and fixes the vanishing gradient problem\n",
+        "  * Can result in dead neurons if z < 0\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://cdn-images-1.medium.com/freeze/max/1000/1*SzuJgFdYWFzCWqND704qgQ.png?q=20\" height=450>\n",
+        "</p>\n",
+        "\n",
+        "5. Leaky Rectified Linear Unit (Leaky ReLU) - variant of ReLU that attemps to resolve the dead gradient problem by allowing a small, non-zero, constant gradient α (normally, α=0.01) for z < 0\n",
+        "  * As it possess linearity, it CAN NOT be used for the complex classification tasks\n",
+        "  * Results are inconsistent\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://codeodysseys.com/posts/activation-functions/graph-activation-6.png\" width=450>\n",
+        "</p>\n",
+        "  \n",
+        "6. SoftMax - calculate the probabilities of each target class over all possible target classes\n",
+        "  * Converts the input of the neuron into the range of 0 and 1 in such a way that the total sum of the outputs is equal to 1 where the value of the output represents the probability of the input belonging to each class\n",
+        "  * Typically used in the output layer of a multiclassification task\n",
+        "\n",
+        "7. Linear\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <img src=\"https://codeodysseys.com/posts/activation-functions/graph-activation-1.png\" width=450>\n",
+        "</p>\n",
+        "\n",
+        "8. \n",
+        "\n",
+        "**Loss Function, Cost Function, and Backpropagation**\n",
+        "\n"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "jqos_ZGmeDDW",
-        "colab_type": "code",
-        "colab": {}
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "# Core Concepts - SQL"
+      ]
     },
     {
       "cell_type": "code",
